2009/11/24
~~~~~~~~~~

* version 0.4
* remove extra +\n+ when there is no R output
* change the name of Sphinx related functions to ReST
* add methods for +freq()+, +compmeans()+ and +CrossTable()+ in package +descr+
* remove +cgroup+ and +rgroup+ arguments in +ascii()+ function
* four new arguments : +tgroup+ (top), +bgroup+ (bottom), +lgroup+ (left) and +rgroup+ (right)
* new arguments +escape+ and +list.escape+ in +print.ascii()+ function

2009/10/28
~~~~~~~~~~

* "results=ascii" for all drivers
* method for +ftable+ objects
* method for +packageDescription+ objects
* method for +sessionInfo+ objects
* fix warning with asciidoc list output

2009/10/24
~~~~~~~~~~

* small bug fix

2009/10/24
~~~~~~~~~~

* version 0.3
* +list.type+ can be +"label"+
* +ascii.simple.list+ method
* +rownames+ and +colnames+ arguments
* +cgroup+ for txt2tags output
* improve col alignment in txt2tags output
* http://sphinx.pocoo.org/[sphinx] driver and output
* http://orgmode.org/[org] driver and output
* improve row and col span (cgroup and rgroup)
* remove +SweaveAscii()+ function
* +Asciidoc()+, +T2t()+, +Sphinx()+ and +Org()+ (wrapper for +Sweave("file.Rnw", RweaveXxx)+)

2009/07/16
~~~~~~~~~~

* version 0.2
* digit and format accept matrix, (each cell can have its own number of digits a
nd format)
* new arguments (+cgroup+, +rgroup+, ...) to define major column and row heading
s like in Hmisc::latex() (only for asciidoc output)
* column style and alignment use cell specifiers
* remove SweaveSyntaxAscii (bug when +]+ is used inside +Sexpr:[]+)


2009/05/11
~~~~~~~~~~

* +\SweaveOpts{}+ now works
* add +SweaveSyntaxAscii+ (+SweaveOpts:[]+, +Sexpr:[]+) 
* add a simple wrapper for +Sweave()+ (+SweaveAscii()+) that use +RweaveAsciidoc+ and +SweaveSyntaxAscii+ as default


2009/04/27
~~~~~~~~~~

* add a +caption.level+ argument
* improve +ascii.describe+ output (package +Hmisc+)


2009/04/08
~~~~~~~~~~

* update DESCRIPTION (with homepage)