@@ -14,6 +14,8 @@ testorg*
 testsphinx*
 index*
 Rplot*
+pygments*
+rs2*
 
 R/asciiEpicalc.r
 R/RweaveTextile.r
