@@ -1,3 +1,9 @@
+2009/11/25
+~~~~~~~~~~
+
+* add ascii.freqtable and ascii.meanscomp in NAMESPACE...
+* header = TRUE for ascii.freqtable and ascii.meanscomp
+
 2009/11/24
 ~~~~~~~~~~
 
